<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home"/>
    <item
        android:id="@+id/Map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/prifile"/>
    <item
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:id="@+id/setting"/>
    <item
        android:icon="@drawable/about"
        android:id="@+id/about"
        android:title="@string/About"/>


</menu>