<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUS"
    android:background="?attr/backgroundcolor"
    >

    <ScrollView
        android:background="?attr/backgroundcolor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:src="@drawable/salahaddin" />

            <TextView
                android:textColor="?attr/textcolor"
                android:layout_width="wrap_content"
                android:layout_height="269dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/about"
                android:textSize="25dp" />

            <TextView
                android:textColor="?attr/textcolor"
                android:textSize="30dp"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/students" />

            <TextView
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/ziad" />

            <TextView
                android:textColor="?attr/textcolor"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/saad"
                android:textSize="20dp" />

            <TextView
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/amen" />

            <TextView
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/yunis" />

            <TextView
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/umer" />

            <TextView
                android:textAlignment="center"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact"
                android:textColor="?attr/textcolor"
                android:textSize="30dp" />

            <Button
                android:id="@+id/saad"
                android:layout_width="225dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_background"
                android:drawableLeft="@drawable/saad2"
                android:text="Saad Musud"
                android:textColor="?attr/textcolor"
                android:layout_marginRight="50dp"
                />
            <Button
                android:layout_marginRight="50dp"
                android:textColor="?attr/textcolor"
                android:id="@+id/umer"
                android:layout_marginTop="20dp"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_background"
                android:drawableLeft="@drawable/umer2"
                android:text="Umer Shaqlawa"
                android:layout_marginLeft="80dp"
                />
            <Button
                android:layout_marginRight="50dp"
                android:textColor="?attr/textcolor"
                android:id="@+id/amen"
                android:layout_marginTop="20dp"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_background"
                android:drawableLeft="@drawable/amen2"
                android:text="Amen Ziad"
                android:layout_marginLeft="80dp"
                />
            <Button
                android:layout_marginRight="50dp"
                android:textColor="?attr/textcolor"
                android:id="@+id/ziad"
                android:layout_marginTop="20dp"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_background"
                android:drawableLeft="@drawable/ziad2"
                android:text="Ziad Assad"
                android:layout_marginLeft="80dp"
                />
            <Button
                android:layout_marginRight="50dp"
                android:textColor="?attr/textcolor"
                android:id="@+id/ynis"
                android:layout_marginTop="20dp"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btn_background"
                android:drawableLeft="@drawable/yunis2"
                android:text="Yunis"
                android:layout_marginLeft="80dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>