<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundcolor"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/changepass"
                    android:textAlignment="center"
                    android:textColor="?attr/textcolor"
                    android:textSize="40dp" />

                <EditText
                    android:layout_marginRight="80dp"
                    android:backgroundTint="?attr/textcolor"
                    android:textColor="?attr/textcolor"
                    android:id="@+id/yourPass"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="60dp"
                    android:hint="@string/oldpass"
                    android:inputType="textPassword"
                    android:textColorHint="?attr/textcolor" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="50dp"
                    app:passwordToggleEnabled="true"
                    android:layout_marginRight="80dp"
                    android:textColorHint="?attr/textcolor"
                    app:passwordToggleTint="?attr/textcolor"
                    >

                    <EditText

                        android:id="@+id/newPass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="?attr/textcolor"
                        android:hint="@string/newPass"
                        android:inputType="textPassword"
                        android:textColor="?attr/textcolor"
                        android:textColorHint="?attr/textcolor" />


                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="80dp"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="?attr/textcolor"
                    app:passwordToggleTint="?attr/textcolor"
                    >

                    <EditText
                        android:backgroundTint="?attr/textcolor"
                        android:textColor="?attr/textcolor"
                        android:id="@+id/confirmPass"
                        android:layout_width="233dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/Cpassowrd"
                        android:inputType="textPassword"
                        android:textColorHint="?attr/textcolor" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#ff0000"
                    android:textSize="18dp" />

                <Button
                    android:layout_marginRight="90dp"
                    android:id="@+id/changePass"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/btn_place"
                    android:text="@string/save"
                    android:textColor="?attr/textcolor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor" />

            </LinearLayout>
        </ScrollView>

</RelativeLayout>